--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -17,6 +17,7 @@ $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
 $orange: #ff6600;
+$beige: #f5f5dc;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
