--- a/src/components/interactions/Circles/styles.module.scss
+++ b/src/components/interactions/Circles/styles.module.scss
@@ -6,25 +6,27 @@
   height: 100%;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 .circles {
   position: absolute;
   top: 0;
   left: 0;
-  overflow: hidden;
   width: 100%;
   height: 100%;
 }
 
 @keyframes fadeOutRotation {
   0% {
-    transform: translateY(0) rotate(0deg);
+    top: 100%;
+    transform: rotate(0deg);
     opacity: 1;
     border-radius: 0;
   }
   100% {
-    transform: translateY(-2000px) rotate(720deg);
+    top: -100px;
+    transform: rotate(720deg);
     opacity: 0;
     border-radius: 50%;
   }
