--- a/src/components/molecules/StoreVisual/styles.module.scss
+++ b/src/components/molecules/StoreVisual/styles.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #f5f5dc;
+  background-color: $beige;
 }
 
 .imageWrapper {
@@ -26,7 +26,7 @@
 }
 
 .iphoneImage {
-  width: 9rem;
+  width: 12rem;
 
   @media (min-width: 768px) {
     width: 18rem;
