--- a/src/components/interactions/ScrollIn/styles.module.scss
+++ b/src/components/interactions/ScrollIn/styles.module.scss
@@ -1,19 +1,54 @@
 .scrollInBase {
     opacity: 0;
-    transform: translateY(50px);
 }
 
 .animated {
-    animation: fadeInUp 0.5s ease-out forwards;
+    opacity: 1;
+    animation-duration: 0.6s;
+    animation-fill-mode: both;
 }
 
-@keyframes fadeInUp {
+.left {
+    animation-name: slideInLeft;
+}
+
+.right {
+    animation-name: slideInRight;
+}
+
+.bottom {
+    animation-name: slideInBottom;
+}
+
+@keyframes slideInLeft {
     from {
+        transform: translateX(-30px);
         opacity: 0;
-        transform: translateY(50px);
     }
     to {
+        transform: translateX(0);
         opacity: 1;
+    }
+}
+
+@keyframes slideInRight {
+    from {
+        transform: translateX(30px);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInBottom {
+    from {
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to {
         transform: translateY(0);
+        opacity: 1;
     }
 }
