--- a/src/components/interactions/Modal/styles.module.scss
+++ b/src/components/interactions/Modal/styles.module.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 50;
+    backdrop-filter: blur(8px);
 }
 
 .modal {
